OO-3296: implements roles per organisation in REST API, fix propagation of administrator role in organisation tree, enhance UI in user management and fix some permission issues to edit invitee and guest, remove admin by-pass for the full text search...